# Horizon

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: discussion.yml
.github/ISSUE_TEMPLATE/: adr.yml  bug.yml  config.yml  discussion.yml  feature.yml  rfc.yml
.github/workflows/: ci.yml
adrs/: ADR-0001-MONOREPO_FOUNDATION.md  ADR-0002-HORIZON_KERNEL_PURITY.md  ADR-0003-HORIZON_EVENT_PLATFORM_BOUNDARY.md  ADR-0004-ASSET_ROOT_AGGREGATE.md  ADR-0005-OBSERVATION_LIFECYCLE.md  ADR-0006-TEMPORAL_TIMELINE.md  ADR-0007-CURRENT_STATE_ENGINE.md  ADR-0008-STORAGE_ADAPTER.md  ADR-0009-PRESENTATION_LAYER.md  ADR-0010-CATALOG_ARCHITECTURE.md  ADR-0011-COLLECTOR_RUNTIME.md  ADR-0012-OBD_COLLECTOR_BOUNDARY.md  ADR-0013-ANDROID_OBD_BRIDGE_BOUNDARY.md  ADR-0014-GATEWAY_BOUNDARY.md  ADR-0015-MOBILE_CLIENT.md  README.md
apps/android-obd-bridge/: README.md  settings.gradle.kts
apps/horizon-lab/: main.py
apps/horizon-mobile/: README.md  settings.gradle.kts
apps/playground/: main.py
docs/: ADR_PROCESS.md  ENGINEERING_PLAYBOOK.md  PROJECT_MEMORY.md
docs/architecture/: 15-EVENT_MODEL.md  MONOREPO_RUNTIME.md
docs/engineering/: DOCUMENT_GOVERNANCE.md
docs/foundations/: HORIZON_CONSTITUTION.md  LIVING_DIGITAL_TWIN_MANIFESTO.md
docs/governance/: ARCHITECTURE_GOVERNANCE.md  CAPABILITY_MODEL.md  DECISION_PROCESS.md  DOCUMENT_HIERARCHY.md  PROJECT_LIFECYCLE.md  REPOSITORY_PRINCIPLES.md
docs/history/: LESSONS_LEARNED.md  PROJECT_TIMELINE.md
docs/releases/: ALPHA_1_1_SUMMARY.md  ALPHA_CERTIFICATION.md
docs/roadmap/: ROADMAP.md
docs/specifications/: SPEC-0001-ASSET.md  SPEC-0002-APPLICATION-LAYER.md  SPEC-0003-OBSERVATION.md  SPEC-0004-TEMPORAL_MEMORY.md  SPEC-0005-CURRENT_STATE_ENGINE.md  SPEC-0006-PERSISTENCE_LAYER.md  SPEC-0007-EXPERIENCE_LAYER.md  SPEC-0008-OBSERVATION_CATALOG.md  SPEC-0009-COLLECTOR_FRAMEWORK.md  SPEC-0010-ANDROID_OBD_COLLECTOR.md  SPEC-0011-ANDROID_OBD_BRIDGE.md  SPEC-0012-LIVE_INGESTION.md  SPEC-0013-HORIZON_MOBILE.md
engineering/capability-006/: COLLECTOR_ARCHITECTURE.md  RESULT.md  REVIEW.md
engineering/capability-007/: OBD_NOTES.md  RESULT.md  REVIEW.md
engineering/capability-008/: ANDROID_TEST_PLAN.md  FIELD_TEST_001.md  RESULT.md  REVIEW.md
engineering/capability-009/: LIVE_FLOW.md  RESULT.md  REVIEW.md
engineering/capability-010/: RESULT.md  REVIEW.md  UX_DECISIONS.md
engineering/capability-011/: RESULT.md  REVIEW.md
engineering/capability-012/: BLUETOOTH_SESSION_ENGINE.md  FIELD_TEST_PLAN.md  RESULT.md  REVIEW.md
engineering/capability-013/: ASSET_BINDING.md  FIELD_TEST_PLAN.md  MOBILE_STATE_SYNC.md  RESULT.md  REVIEW.md
milestones/: M1-FIRST-LIVE-OBSERVATION.md  M2-FIRST-LIVE-VEHICLE-TELEMETRY.md
rfcs/: README.md  RFC-0001-HORIZON_KERNEL.md  RFC-0002-HORIZON_EVENT_PLATFORM.md  RFC-0003-DOMAIN_LANGUAGE.md  RFC-0003-HORIZON_PROTOCOL.md  RFC-0004-DOMAIN_LANGUAGE.md  RFC-0005-OBSERVATION_DOMAIN.md  RFC-0006-TEMPORAL_MEMORY_ENGINE.md  RFC-0007-CURRENT_STATE_ENGINE.md  RFC-0008-PERSISTENCE_LAYER.md  RFC-0009-EXPERIENCE_LAYER.md  RFC-0010-OBSERVATION_CATALOG.md  RFC-0011-COLLECTOR_FRAMEWORK.md  RFC-0012-ANDROID_OBD_COLLECTOR.md  RFC-0013-ANDROID_OBD_BRIDGE.md  RFC-0014-LIVE_INGESTION_GATEWAY.md  RFC-0015-HORIZON_MOBILE.md
scripts/: bootstrap-dev.sh  run-gateway.sh
storage/: metadata.json
tests/: test_repository_foundation.py
tools/: android_obd_probe.py
(+114 files in other folders)
